--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,8 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Avions</a>
+      <a class="nav-link" routerLink="/aircrafts">Avions</a>
     </li>
-
-
 
     <li class="nav-item">
       <a class="nav-link" href="#">Ajouter un avion</a>
@@ -31,4 +29,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<router-outlet></router-outlet>
+<router-outlet>Hello</router-outlet>
