--- a/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
+++ b/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm">
-  <ul class="navbar navbar-nav align-items-center">
+  <ul class="navbar navbar-nav align-items-center ">
     <li>
       <button class="btn btn-outline-info m-2" (click)="getAllAircrafts()">
         Avions
@@ -15,7 +15,7 @@
       </button>
     </li>
     <li class="d-flex align-items-center">
-      <form [formGroup]="searchForm" (ngSubmit)="onSearch()" class="d-flex ms-2">
+      <form [formGroup]="searchForm" (ngSubmit)="GetOnSearchBarAircraft()" class="d-flex ms-2">
         <input
           type="text"
           formControlName="prog"
