--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#">Ajouter un avion</a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="#">Administration</a>
+      <a class="nav-link" href="#">Alert</a>
     </li>
   </ul>
 
