--- a/src/app/components/aircraft/aircraft.component.html
+++ b/src/app/components/aircraft/aircraft.component.html
@@ -24,7 +24,7 @@
             <p><strong>Design:</strong> {{ state.selectedAircraft.design }}</p>
             <p><strong>Development:</strong> {{ state.selectedAircraft.development }}</p>
           </div>
-          <button class="btn btn-primary" (click)="onBack()">Back to List</button>
+          <button class="btn btn-primary" (click)="onBack()">Revenir aux avions</button>
         </div>
       </div>
     </ng-container>
