--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,4 +25,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<router-outlet>Hello</router-outlet>
+<router-outlet></router-outlet>
